Confiant AdQuality: Review improvements, single filtering for scan results list